--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
         completions."
     </string>
     <string name="title_activity_select_user">SelectUserActivity</string>
+    <string name="title_activity_refugee__profile">Refugee_Profile</string>
 </resources>
