--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -19,4 +19,5 @@
     </string>
     <string name="title_activity_select_user">SelectUserActivity</string>
     <string name="title_activity_refugee__profile">Refugee_Profile</string>
+    <string name="title_activity_donor__sign_up">Donor_SignUp</string>
 </resources>
